feat: java/graalvm 21+ support
- fix: support up to graalvm/jdk 23 (latest)
- fix: don't use `gu` tool for modern graalvm versions
- fix: coordinate change for `shadow` plugin (`com.gradleup.shadow`)
- fix: build with `--add-modules=jdk.unsupported` where needed
- fix: use jdk21 to run the tests (needed for `Unsafe.ensureInitialized`)
- fix: truffle svm dependency is required after graalvm `24.0.0`
- chore: bump graalvm → `24.1.0`
- chore: bump shadow → `8.3.5`

Signed-off-by: Sam Gammon <sam@elide.dev>