@@ -13,6 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+import org.gradle.internal.jvm.inspection.JvmVendor
 import java.nio.file.Files
 import java.nio.file.LinkOption
 
@@ -21,6 +22,7 @@ plugins {
   pklJavaLibrary
   pklPublishLibrary
   pklKotlinTest
+  `jvm-toolchains`
 }
 
 val pklDistributionCurrent: Configuration by configurations.creating
@@ -38,6 +40,10 @@ dependencies {
 
   testImplementation(projects.pklCommonsTest)
   testImplementation(projects.pklCore)
+  testImplementation(libs.truffleApi)
+  testImplementation(libs.graalSdk)
+  testImplementation(libs.svm)
+  testImplementation(libs.truffleSvm)
   testImplementation(libs.slf4jSimple)
 }
 
@@ -98,4 +104,16 @@ val prepareHistoricalDistributions by
 val prepareTest by
   tasks.registering { dependsOn(pklDistributionCurrent, prepareHistoricalDistributions) }
 
-tasks.test { dependsOn(prepareTest) }
+val testToolchain = javaToolchains.launcherFor {
+  languageVersion = JavaLanguageVersion.of(21)
+  vendor = JvmVendorSpec.GRAAL_VM
+}
+
+tasks.test {
+  javaLauncher = testToolchain
+  dependsOn(prepareTest)
+  useJUnitPlatform()
+  jvmArgumentProviders.add(CommandLineArgumentProvider {
+    listOf("--add-modules=jdk.unsupported")
+  })
+}
